# AIIM

./: .gitignore  README.md  pyproject.toml
notebooks/: 00-Crash Course.ipynb  01-Introduction-to-Neural-Networks-1-solution.ipynb  01-Introduction-to-Neural-Networks-1.ipynb  L04-Convolutional-Neural-Networks.ipynb
notebooks/exercises/: E01 - Neural Networks.ipynb  E02 - Word2Vec.ipynb  E02_Word_Embeddings_with_Word2Vec.ipynb  E03 - CNNs.ipynb  E04 - Classification with BERT.ipynb
notebooks/exercises/solutions/: E01 - Neural Networks.ipynb  E02 - Word Embeddings with Word2Vec.ipynb  E03 - Convolutional Neural Networks.ipynb  E04 - Text Classification with BERT.ipynb
notebooks/solutions/: 00-Introduction-to-PyTorch.ipynb  01-Introduction-to-Neural-Networks.ipynb
src/aiim/: helper.py  visualization.py
