[tool.poetry]
name = "aiim"
version = "0.1.0"
description = "Repository for the Artificial Intelligence & Information Management Course"
authors = ["Johannes Melsbach <github@melsbach.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.7.1"
numpy = "^1.25.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
